--- a/css/styles.css
+++ b/css/styles.css
@@ -91,11 +91,17 @@ ul [class] {list-style-type: none;}
     margin-bottom: 0px;
     display: flex;
 }
-.main-nav .link{
+.nav-link{
+    position: relative;
     display: block;
     margin-bottom: 0px;
     padding-top: 32px;
     padding-bottom: 32px;
+
+    cursor: pointer;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     color: var(--title-text-color);
     font-family: Roboto, sans-serif;
@@ -106,14 +112,25 @@ ul [class] {list-style-type: none;}
     letter-spacing: 0.02em;
     }
 
-.main-nav .link:hover,
-.main-nav .link:focus, 
-.main-nav .link:active{
+.nav-link:hover,
+.nav-link:focus, 
+.nav-link:active{
     color:var(--accent-color);
 }
-.main-nav .link.curent{
+.nav-link.curent{
     color:var(--accent-color);
-}    
+}  
+
+.nav-link.curent::after{
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    bottom: 0;
+    background-color:var(--accent-color);
+}   
 
    .address-nav .list{
     display: flex;
@@ -139,6 +156,10 @@ ul [class] {list-style-type: none;}
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
+    cursor: pointer;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     color:var(--primary-text-color);
     font-family: Roboto, sans-serif;
@@ -149,7 +170,7 @@ ul [class] {list-style-type: none;}
     letter-spacing: 0.02em;
     }      
 
-    .address-mail:hover{
+    .address-mail:hover, .address-mail:focus, .address-mail:active{
         color: var(--accent-color);
     }
 
@@ -384,9 +405,23 @@ ul [class] {list-style-type: none;}
         }   
 
 .profile .image{
-    display: block;
     width: 370px;
     height: 294px;
+}
+
+.image-box{
+    display: block;
+    position: relative;
+}
+
+.box-title{
+    position: absolute;
+    display: block;
+    background-color: rgba(47, 48, 58, 0.8);
+    width:100%;
+    bottom: 0;
+    right: 0;
+
 }
 
 .profile .list{
@@ -522,8 +557,12 @@ letter-spacing: 0.03em;
     align-items: center;
     justify-content: center;
     display: inline-flex;
+    cursor: pointer;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-links:hover
+.social-links:hover, .social-links:focus, .social-links:active
     {background-color: var(--accent-color);
     --color4: #FFFFFF;}
 
@@ -564,10 +603,14 @@ letter-spacing: 0.03em;
     height: 90px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    cursor: pointer;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
-.clients__logo:hover{
+.clients__logo:hover, .clients__logo:focus, .clients__logo:active{
     border: 1px solid var(--accent-color);
     --color4: #2196F3;
 }
@@ -687,12 +730,16 @@ margin-right: 94px;
     align-items: center;
     justify-content: center;
     display: inline-flex;
+    cursor: pointer;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer__social-links:not(:last-child){
     margin-right: 10px;
 }
 
-.footer__social-links:hover{
+.footer__social-links:hover, .footer__social-links:focus, .footer__social-links:active{
     background-color: var(--accent-color);
 }
 
@@ -735,6 +782,7 @@ margin-right: 94px;
     margin-left: 12px;
     width: 200px;
     height: 50px;
+    cursor: pointer;
 
     color: var(--title-second-text-color);
     font-family: Roboto, sans-serif;
@@ -819,6 +867,49 @@ margin-right: 94px;
     margin-bottom: 30px;
 }
 
+.portfolio-box{
+    position: relative;
+   overflow: hidden;
+}
+
+.portfolio-overlay{
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+       
+    background-color: rgba(33, 150, 243, 0.9);
+}
+.product-thumb{
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+}
+
+.product-thumb:hover .portfolio-overlay{
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+    transform: translateY(-100%);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-overlay:hover, .portfolio-overlay:focus, .portfolio-overlay:active{
+    transform: translateY(-100%);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-text{
+    color: var(--title-second-text-color);
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.55
+    letter-spacing: 0.03em;
+    text-align: center;
+
+}
+
 .portfolio__image-card{
     display: block
 }
@@ -829,14 +920,7 @@ margin-right: 94px;
 .portfolio-link{
     display: block;
     width: 370px;
-
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    border-radius: 5px;
-}
-.portfolio-link:hover{
-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-}
+   }
 
 .portfolio-title{
     margin-top: 20px;
