--- a/css/styles.css
+++ b/css/styles.css
@@ -831,6 +831,10 @@ margin-right: 94px;
         padding-right: 22px;
         padding-bottom: 6px;
         padding-left: 22px;
+        cursor: pointer;
+        transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
         background-color: var(--accent-background-color);
         color: var(--title-text-color);
@@ -877,19 +881,23 @@ margin-right: 94px;
     display: inline-block;
     width: 100%;
     height: 100%;
+    padding-top: 63px;
+    padding-right: 24px;
+    padding-bottom: 63px;
+    padding-left: 24px;
        
     background-color: rgba(33, 150, 243, 0.9);
 }
 .product-thumb{
     background: #FFFFFF;
-    border: 1px solid #EEEEEE;
+   outline: 1px solid #EEEEEE;
 }
 
 .product-thumb:hover .portfolio-overlay{
-    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     transform: translateY(-100%);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-overlay:hover, .portfolio-overlay:focus, .portfolio-overlay:active{
@@ -938,7 +946,7 @@ margin-right: 94px;
 
 .portfolio__name{
     margin-top: 4px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     margin-left: 24px;
    
     color: var(--primary-text-color);
