--- a/css/styles.css
+++ b/css/styles.css
@@ -783,6 +783,7 @@ margin-right: 94px;
     width: 200px;
     height: 50px;
     cursor: pointer;
+    border: none;
 
     color: var(--title-second-text-color);
     font-family: Roboto, sans-serif;
@@ -914,7 +915,7 @@ margin-right: 94px;
     font-size: 18px;
     line-height: 1.55
     letter-spacing: 0.03em;
-    text-align: center;
+    text-align: :start;
 
 }
 
