--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,6 @@ ul [class] {list-style-type: none;}
 .box-title{
     position: absolute;
     display: block;
-    background-color: rgba(47, 48, 58, 0.8);
     width:100%;
     bottom: 0;
     right: 0;
@@ -607,12 +606,16 @@ letter-spacing: 0.03em;
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
+      
 }
 
 .clients__logo:hover, .clients__logo:focus, .clients__logo:active{
     border: 1px solid var(--accent-color);
     --color4: #2196F3;
+}
+
+.clients-icon{
+   fill: currentColor;
 }
 
     /*Портфолио*/
@@ -833,7 +836,8 @@ margin-right: 94px;
         padding-bottom: 6px;
         padding-left: 22px;
         cursor: pointer;
-        transition-property: background-color;
+        border: none;
+        transition-property: background-color, box-shadow;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -853,6 +857,7 @@ margin-right: 94px;
       .button-container__button:active{
           background-color: var(--accent-color);
           color: var(--title-second-text-color);
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
       }
       
 .production.list{
@@ -891,8 +896,7 @@ margin-right: 94px;
 }
 .product-thumb{
     background: #FFFFFF;
-   outline: 1px solid #EEEEEE;
-}
+   }
 
 .product-thumb:hover .portfolio-overlay{
     transform: translateY(-100%);
@@ -913,7 +917,7 @@ margin-right: 94px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 1.55
+    line-height: 1.55;
     letter-spacing: 0.03em;
     text-align: :start;
 
@@ -923,18 +927,30 @@ margin-right: 94px;
     display: block
 }
 
-.portfolio__card{
-        
+.portfolio__card-content{
+        border-bottom: 1px solid #EEEEEE;
+        border-left: 1px solid #EEEEEE;
+        border-right: 1px solid #EEEEEE;
+        transition-property: border;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio__card-content:hover{
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+    
+}
+
 .portfolio-link{
     display: block;
     width: 370px;
    }
 
 .portfolio-title{
-    margin-top: 20px;
-    margin-bottom: 4px;
-    margin-left: 24px;
+    padding-top: 20px;
+    padding-bottom: 4px;
+    padding-left: 24px;
+    margin: 0;
     
     color: var(--title-text-color);
     font-family: Roboto, sans-serif;
@@ -946,9 +962,10 @@ margin-right: 94px;
 }
 
 .portfolio__name{
-    margin-top: 4px;
+    padding-top: 4px;
     padding-bottom: 20px;
-    margin-left: 24px;
+    padding-left: 24px;
+    margin: 0;
    
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
