--- a/css/styles.css
+++ b/css/styles.css
@@ -898,7 +898,7 @@ margin-right: 94px;
     background: #FFFFFF;
    }
 
-.product-thumb:hover .portfolio-overlay{
+.portfolio-link:hover .portfolio-overlay{
     transform: translateY(-100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
@@ -936,7 +936,7 @@ margin-right: 94px;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio__card-content:hover{
+.portfolio-link:hover .portfolio__card-content{
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
     
 }
