--- a/css/styles.css
+++ b/css/styles.css
@@ -903,7 +903,7 @@ margin-right: 94px;
     background: #FFFFFF;
    }
 
-.portfolio-link:hover .portfolio-overlay{
+.portfolio-link:hover .portfolio-overlay, .portfolio-link:focus .portfolio-overlay{
     transform: translateY(-100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
